Se fusiona funcionalidad y se refactoriza la estructura del proyecto

--- a/arqWeb-2023/.gitignore
+++ b/arqWeb-2023/.gitignore
@@ -1,1 +1,21 @@
-!.persistence.xml
+# Archivos y directorios generados por Eclipse
+.classpath
+.project
+.settings/
+
+# Archivos y directorios generados por Maven
+target/
+/bin/
+
+# Archivos temporales del sistema operativo
+.DS_Store
+Thumbs.db
+
+# Archivos temporales de otros editores
+*.swp
+*.swo
+*~
+
+# BD Derby
+DB_Game/
+*.log
